# pecc_hackathon

./: README.md  pyproject.toml
challenge-1/: Challenge-1.ipynb  Untitled.ipynb
challenge-2/: Question 1.ipynb  Question 2.ipynb  Question 3.ipynb
