[tool.poetry]
name = "pecc-hackathon"
version = "0.1.0"
description = ""
authors = ["zodiacfirework <martin.vuelta@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
jupyterlab = "^3.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
